[project]
name = "binance-testnet-agent"
version = "1.0.10"
description = "A conservative Binance Spot live trading agent with dashboard, backtests, and dry-run defaults."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
binance-agent = "binance_testnet_agent.cli:main"

[tool.setuptools.package-data]
binance_testnet_agent = ["static/*.png"]
